--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">VegansTaskAssessment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="media_details">Media Details</string>
+    <string name="media_list">Media List</string>
+    <string name="title">Nuova boutique Moncler a Taiwan - Taipei 101</string>
+    <string name="dateString">Mon, 23 Jul 2018 00:00:00 +0000</string>
+    <string name="mediaTitleCustom">Moncler Beyond. The institutional adv campaign</string>
 </resources>
